website/k8s/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-mysql-deploy
  labels:
    app: website
    service: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
      service: mysql
  template:
    metadata:
      labels:
        app: website
        service: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          args:
            - --default-authentication-plugin=mysql_native_password
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              subPath: "mysql"
              name: mysql-storage
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: website-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-phpmyadmin-deploy
  labels:
    app: website
    service: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
      service: phpmyadmin
  template:
    metadata:
      labels:
        app: website
        service: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: website-mysql-service
  labels:
    app: website
    service: mysql
spec:
  selector:
    app: website
    service: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: website-phpmyadmin-service
  labels:
    app: website
    service: phpmyadmin
spec:
  type: NodePort
  selector:
    app: website
    service: phpmyadmin
  ports:
    - protocol: TCP
      nodePort: 31950
      port: 80
      targetPort: 80
