website/k8s/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-nginx-deployment
  labels:
    app: website
    service: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
      service: nginx
  template:
    metadata:
      labels:
        app: website
        service: nginx
    spec:
      containers:
        - name: nginx
          image: lissenburg/website-nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: website-nginx-service
  labels:
    app: website
    service: nginx
spec:
  selector:
    app: website
    service: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
