website/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lissenburg-website-ingress
spec:
  rules:
    - host: k8s.lissenburg.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website-nginx-service
                port:
                  number: 80
